[project]
name = "pymhihvac"
version = "0.1.0"
description = "API wrapper for MHI HVAC Central Control SC-SL4"
authors = [
    {name = "coserotondo",email = "cose.rotondo@gmail.com"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "aiohttp (>=3.11.14,<4.0.0)",
    "voluptuous (>=0.15.2,<0.16.0)"
]

[tool.poetry]

[tool.poetry.group.dev.dependencies]
aiohttp = "^3.11.14"
voluptuous = "^0.15.2"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
